# datagrid-local-attention-dit

./: .gitignore  README.md  config.py  infer_i2i.py  infer_t2i.py  pyproject.toml  requirements.txt
localdit/: __init__.py  inference.py  pipeline_i2i.py  pipeline_t2i.py  utils.py
localdit/models/: attentions.py  ema.py
scripts/: train_example.py
